# csvault

./: .env.example  .gitignore  README.md  db.sql  main.py  pyproject.toml  requirements.txt
bot/: main.py
bot/commands/: agent.py  case.py  collection.py  foo.py  package.py  skin.py
bot/core/: config.py  logging.py
bot/utils/: config.py  db.py  embed.py  embeds.py  log.py  settings.py
tests/: test_db.py  test_embed.py
